1.9.29
------

1.9.28
------
(RB=210345)
Make use of async servlet api in R2 servlet. Change integration tests to start test servers as necessary.

1.9.27
------
(RB=212287)
Refactor restli-client request builder classes:
  1) deprecate header(), param and reqParam()
  2) add setHeader(), setHeaders(), addHeader(), setParam(), setReqParam(), addParam() and addReqParam()
For query parameter and action parameter that is array type, add convenient request builder method to add element one by one.
For ActionRequestBuilder, required parameter will call reqParam() instead of param() now.

1.9.26
------
(RB=210935)
Added the ability to inject MaskTree (@Projection) and PathKeys (@Keys) from a
request into a method.  This allows KeyValueResources to be able to use
Projections and PathKeys in their method implementations.

(RB=211406)
Fix bug that when complex resource key contains invalid URI characters (e.g. space), batch update fails with URISyntaxException.

1.9.25
------
(RB=211206, 211283)
Added ability for clients to specify either actual lists or string representation of lists for transport client properties.

1.9.24
------
(RB=202295)
Refactor IDL and Snapshot compatibility checks. Move file number checks to their
own tasks. Add in a flag -Prest.idl.skipCheck to allow all IDL checks to be
skipped. (IDL file count check is still run with -Prest.idl.compatibility=OFF)

(RB=208110)
Add InvokeAware interface to allow user code to listen to the restli method invocation events in restli server.

(RB=209638)
Add ProjectionMode option in ResourceContext to allow rest.li service implementers
to disable automatic projection when they are explicitly examining and applying
projections.

1.9.23
------
(RB=206396)
To detect, as early as possible, a mistake that is otherwise difficult to debug, add 
check during data template generation that verifies filename and path match schema 
name and namespace.

(RB=207258)