@@ -28,14 +28,16 @@ public interface RestConstants
   int DEFAULT_START = 0;
   int DEFAULT_COUNT = 10;
 
-  String HEADER_LINKEDIN_TYPE = "X-LinkedIn-Type";
-  String HEADER_LINKEDIN_SUB_TYPE = "X-LinkedIn-Sub-Type";
+  String HEADER_RESTLI_TYPE = "X-RestLi-Type"; // replacement for X-LinkedIn-Type, which has been removed
+  String HEADER_RESTLI_SUB_TYPE = "X-RestLi-Sub-Type"; // replacment for X-LinkedIn-Sub-Type, which has been removed
   String HEADER_RESTLI_REQUEST_METHOD = "X-RestLi-Method";
-  String HEADER_LINKEDIN_ERROR_RESPONSE = "X-LinkedIn-Error-Response";
+  String HEADER_LINKEDIN_ERROR_RESPONSE = "X-LinkedIn-Error-Response"; // we are deprecating all X-Linkedin header prefixes and replacing them with X-RestLi
+  String HEADER_RESTLI_ERROR_RESPONSE = "X-RestLi-Error-Response"; // replacement for X-LinkedIn-Error-Response for when it is removed
   String HEADER_VALUE_ERROR_PREPROCESSING = "FWK-PRE";
   String HEADER_VALUE_ERROR_POSTPROCESSING = "FWK-POST";
   String HEADER_VALUE_ERROR_APPLICATION = "APP";
-  String HEADER_ID = "X-LinkedIn-Id";
+  String HEADER_ID = "X-LinkedIn-Id"; // we are deprecating all X-Linkedin header prefixes and replacing them with X-RestLi
+  String HEADER_RESTLI_ID = "X-RestLi-Id"; // replacement for X-LinkedIn-Id for when it is removed
   String HEADER_LOCATION = "Location";
   String HEADER_ACCEPT = "Accept";
   String HEADER_CONTENT_TYPE = "Content-Type";
